--- a/index.html
+++ b/index.html
@@ -4,76 +4,43 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mobile-food-site- : ">
+    <meta name="description" content="Library-site- : ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+         <link rel="stylesheet" href="css/custom.css">
 
-    <title>Mobile-food-site-</title>
+
+    <title>Order Mobile Site Julia -</title>
   </head>
 
   <body>
+<h2> Julia Kong  </h2>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/juliakong/mobile-food-site-">View on GitHub</a>
+<h3> First Page has an about us blurbs, but has glowing down arrow to prompt user to scroll downwards. They could also click the arrow for an automatic scroll to the next page down </h3>
+ <img src="lab1.jpg" alt="page1" style="width:500px;height:600px">
 
-          <h1 id="project_title">Mobile-food-site-</h1>
-          <h2 id="project_tagline"></h2>
+<h3> Second page shows options for navigation. The order now button is outlined for emphasis </h3>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/juliakong/mobile-food-site-/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/juliakong/mobile-food-site-/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+   <img src="lab2.jpg" alt="page1" style="width:500px;height:600px">
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<h3> Upon clicking the Order Now button, the third page shows up, displaying the top 5 entrees to order from. These are presented as images with the name below and an "Add" botton below each option to add this dish to the cart. At the bottom right hand corner, there is a button to click to place the order, as well as a cart total that is updated after each order addition. Please ignore the side text outside of the image. </h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<img src="Lab3.jpg" alt="page1" style="width:500px;height:600px">
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+   <h3> When the image is pressed on by the user, a window pops up beside it that has a larger image, description, and price. The background dims.  </h3>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+   <img src="lab4.jpg" alt="page1" style="width:500px;height:600px">
+  
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+   <h3> When the Order button is selected, a new page shows up that allows the user to select the delivery time from a drop down menu. They can also confirm their contact information drawn from Facebook. If correct, they will press "Place Order"  </h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+   <img src="lab5.jpg" alt="page1" style="width:500px;height:600px">
+  
+ <h3>The last page thanks them for their order and lets them know a confirmation text will be sent. They can choose to return home with the last button  </h3>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+   <img src="lab6.jpg" alt="page1" style="width:500px;height:600px">
+  
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Mobile-food-site- maintained by <a href="https://github.com/juliakong">juliakong</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
 
   </body>
 </html>
